list paste by category and tags
