# docs/swagger.yaml
@@ -276,6 +276,61 @@ paths:
       summary: View  all categories
       tags:
       - taxonomy
+  /category/{category}:
+    get:
+      description: Pastes can be viewed depending on visibility status of the paste
+      parameters:
+      - description: show data on page n
+        in: query
+        name: page
+        type: integer
+      - description: limit items per page
+        in: query
+        name: limit
+        type: integer
+      - description: filter query
+        in: query
+        name: q
+        type: string
+      - description: Category name
+        in: path
+        name: category
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/handlers.Response'
+            - properties:
+                data:
+                  allOf:
+                  - $ref: '#/definitions/utils.Paginator'
+                  - properties:
+                      rows:
+                        items:
+                          $ref: '#/definitions/model.Paste'
+                        type: array
+                    type: object
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      summary: Paste By Category
+      tags:
+      - taxonomy
   /change-email:
     post:
       description: Need to login first
@@ -690,6 +745,61 @@ paths:
           schema:
             $ref: '#/definitions/handlers.Response'
       summary: View  all tags
+      tags:
+      - taxonomy
+  /tag/{tag}:
+    get:
+      description: Pastes can be viewed depending on visibility status of the paste
+      parameters:
+      - description: show data on page n
+        in: query
+        name: page
+        type: integer
+      - description: limit items per page
+        in: query
+        name: limit
+        type: integer
+      - description: filter query
+        in: query
+        name: q
+        type: string
+      - description: Tag name
+        in: path
+        name: tag
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/handlers.Response'
+            - properties:
+                data:
+                  allOf:
+                  - $ref: '#/definitions/utils.Paginator'
+                  - properties:
+                      rows:
+                        items:
+                          $ref: '#/definitions/model.Paste'
+                        type: array
+                    type: object
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.Response'
+      summary: Paste By Tag
       tags:
       - taxonomy
 securityDefinitions:
